AO3-6748 Fix stats line not wrapping in Low Vision Default (#4961)
AO3-6748 make the stats line wrap

--- a/public/stylesheets/masters/low_vision_default/low_vision_default_site_screen_.css
+++ b/public/stylesheets/masters/low_vision_default/low_vision_default_site_screen_.css
@@ -95,6 +95,16 @@ dd fieldset {
   border: 0;
 }
 
+.meta .stats dl {
+  float: left;
+  margin-top: 0;
+}
+
+.meta .stats dl dd,
+.meta .stats dl dt {
+  float: left;
+}
+
 textarea,
 pre {
   font-size: 200%;
